Started voltage clamping. First try to use circuitiz.

--- a/tex/NeuronModeling.tex
+++ b/tex/NeuronModeling.tex
@@ -1,5 +1,7 @@
 \documentclass{article}
 
+\usepackage{tikz}
+\usepackage{circuitikz}
 \usepackage[utf8]{inputenc}
 \usepackage[english,bulgarian]{babel}
 
@@ -13,24 +15,59 @@
 
 \tableofcontents
 \newpage
-
-1. Науката за невроните и приложение
-2. Структура на неврона
-  1. Обобщено устройство на неврона
-  2. Синапси
-3. Мембрана на неврона
-4. Аксонът на Ходжкинс-Хъксли
-5. Извеждане на математическия модел и метод за решаване
-6. Програмна реализация на математическия модел и анимация
+\title{TO DO}
+\begin{enumerate}
+    \item Науката за невроните и приложение
+    \item Структура на неврона
+        \begin{enumerate}
+            \item Обобщено устройство на неврона
+            \item Синапси
+        \end{enumerate}
+    \item Мембрана на неврона
+    \item Аксонът на Ходжкинс-Хъксли
+        \begin{enumerate}
+            \item Изравняване на напрежението (Voltage Clamping)
+        \end{enumerate}
+    \item Извеждане на математическия модел и метод за решаване
+    \item Програмна реализация на математическия модел и анимация
+\end{enumerate}
 
 \section{Науката за невроните и приложение}
 
-Мозъкът, намиращ се в черепната кухина, е част от централната нервна ссистема. Той е основният орган, който обработва всички съзнателни и несъзнателни стимули, чувства,  познания и памет. Също така е отговрен за контролирането на множество други органи. Основната градивна единица на мозъка е неврона. Човешкия мозък съдържа около   неврона. Невронните клетки приемат, обработват и изпращат нервния импулс.
-Животните реагират на външни въздействия, използвайки невроните.  Например при заплаха от изгаряне, рецепторите за топлина на сензорен неврон осъществяват връзка със стимула и изпращат информация до интер-неврон в централната нервна система. От там мото-неврон изпраща отговорът до скелетните мускули, които карат тялото да се отдръпне. В основата на извършването на този процес стои невротрансмисията, която се извършва във всични неврони в човешкото тяло. Невроните пренасят тази информация чрез промени в 
-електричесния потенциал на мембраната.
+Мозъкът, намиращ се в черепната кухина, е част от централната нервна ссистема. Той е основният орган, който обработва всички съзнателни и
+несъзнателни стимули, чувства,  познания и памет. Също така е отговрен за контролирането на множество други органи. Основната градивна
+единица на мозъка е неврона. Човешкия мозък съдържа около   неврона. Невронните клетки приемат, обработват и изпращат нервния импулс.
+Животните реагират на външни въздействия, използвайки невроните.  Например при заплаха от изгаряне, рецепторите за топлина на сензорен
+неврон осъществяват връзка със стимула и изпращат информация до интер-неврон в централната нервна система. От там мото-неврон изпраща
+отговорът до скелетните мускули, които карат тялото да се отдръпне. В основата на извършването на този процес стои невротрансмисията, която
+се извършва във всични неврони в човешкото тяло. Невроните пренасят тази информация чрез промени в електричесния потенциал на мембраната.
 
 \section{Устройство на неврона}
 
-аксон - най-издълженият израстък на неврона, чиято дължина може да надхвърли десетки хиляди пъти диаметъра на клетъчното тяло. Аксонът извежда нервните импулси от клетъчното тяло, пренасяйки информация до друга клетка. Нервните импулси са еднопосочни в аксонът, но невронът може да получи информация под формата на протеини които се придвижват от синапса до клетъчното ядро. Много неврони имат само един аксон, но той се разклонява в много направления и така прави възможна комуникацията с много клетки.
-нервен импулс – 
+аксон - най-издълженият израстък на неврона, чиято дължина може да надхвърли десетки хиляди пъти диаметъра на клетъчното тяло. Аксонът
+извежда нервните импулси от клетъчното тяло, пренасяйки информация до друга клетка. Нервните импулси са еднопосочни в аксонът, но невронът
+може да получи информация под формата на протеини които се придвижват от синапса до клетъчното ядро. Много неврони имат само един аксон, но
+той се разклонява в много направления и така прави възможна комуникацията с много клетки.  нервен импулс – 
+
+\section{Аксонът но Ходжкинс-Хъксли}
+\subsection[Изравняване на напрежението]{Изравняване на напрежението\footnote{Voltages Clamping}}
+    За да можем да изследваме напълно някое свойство на даден предмет, трябва да можем да го контролираме процесите, в които това свойство
+    се проявява.  Един от най - важните ппроцеси за нас е процесът по обмяна на вещества.  Обмяната на вещества от своя страна, обаче влияе
+    на напрежението в неврона, което от своя страна влияе на обмяната на веществана. Виждаме, че се получава цикличен процес, който се
+    изследва много трудно. За наше щастие съществува начин, по който да фиксираме напрежението в неврона. Този метод са използвали Ходжкинс
+    и Хъксли. 
+    \begin{figure}[h!]
+        \begin{center}
+            \begin{circuitikz}
+                \draw (5,5)
+                    node[op amp](opamp){}
+                    (0,0) node[left] {Axon}  to [V]
+                    (opamp.+) node[left] {$v_+$}
+                    (opamp.-) node[left] {$v_-$}
+                    (opamp.out) node[left] {$v_+o$}
+                ;\end{circuitikz}
+            \caption{My first circuit.}
+        \end{center}
+    \end{figure}
+
 \end{document} 
