Voltage clamping done. Added scheme.

--- a/tex/NeuronModeling.tex
+++ b/tex/NeuronModeling.tex
@@ -4,6 +4,7 @@
 \usepackage{circuitikz}
 \usepackage[utf8]{inputenc}
 \usepackage[english,bulgarian]{babel}
+\usepackage{graphicx}
 
 \title{Приложение на математиката за моделиране на реални процеси. Моделиране на неврон.}
 \author{Тонка Желева \and Васил Пашов}
@@ -55,28 +56,17 @@
     се проявява.  Един от най - важните ппроцеси за нас е процесът по обмяна на вещества.  Обмяната на вещества от своя страна, обаче влияе
     на напрежението в неврона, което от своя страна влияе на обмяната на веществана. Виждаме, че се получава цикличен процес, който се
     изследва много трудно. За наше щастие съществува начин, по който да фиксираме напрежението в неврона. Този метод са използвали Ходжкинс
-    и Хъксли. 
-    \begin{figure}[h!]
-        \begin{center}
-            \begin{circuitikz}
-                \draw 
-                    (5,5) node[op amp](opamp){}
-                    (5,1.51)node[op amp, rotate=180](opamp2){}
-                    %(0,0) node[left] {Axon}  to [V]
-                    (1,5.5) to [V]
-                    (opamp.-) node[left] {$v_-$}
-                    (opamp.+) node[left] {$v_+$}
-                    (opamp.out) node[left] {$v_o$}
-                    (6,5) to (8,5)
-                    (8,5) to (8,2)
-                    (8,2) to (6,2)
-                    (8,1) to (6,1.01)
-                    ++(-2,0.5) to ++(-6,0)
-                    ++(0,0) to ++(0,3)
-                    ++(0,0)to[generic] ++(1.5,0)
-                ;\end{circuitikz}
-            \caption{My first circuit.}
-        \end{center}
-    \end{figure}
+    и Хъксли. Нека разгледаме следната схема.
+    \begin{center}
+        \includegraphics{./schemas/voltage-clamp.pdf}
+    \end{center}
+    През аксона е прокаран дълъг и тънък проводник, свързан с положителния вход на усилвател с коефициент 1. Отрицателният вход на усилвателя
+    е заземен (или е свързан с течност като тази в която се намира неврона). По този начин усилвателя предава ток с напрежение $V_n$ равно на
+    напрежението в самия неврон. Този ток се подава като отрицателен вход на друг усилвател с коефициент 1. На положителния вход на този
+    усилвател се подава ток с напрежение двойно на желаното равновесно напрежение $V_d$. Този ток през амперметър и след това се подава в
+    другия край на аксона. По точи начин ако $V_n > 2V_d$ в точката $AL$ напрежението ще бъде по - ниско от нормалното за акосна, за да се
+    компенсира това положителните частици ще се насочат в тази посока, намаляки напрежението в аксона. Напрежението ще намалява клонейки към
+    $V_n$ и когато стане равно на $V_n$ токът, излизащ от усилвател $U_2$ ще бъде с напрежение $U_d$, като така се получава равновесие в
+    системата.
 
 \end{document} 
