--- a/tex/NeuronModeling.tex
+++ b/tex/NeuronModeling.tex
@@ -75,12 +75,10 @@
 
 Всички електрически сигнали, които използват невроните за комуникация, представляват деполяризация или хиперполяризация на равновесния мемранен потенциал.
 
-\vspace{5mm} %5mm vertical space
 \subsection{Равновесен мембранен потенциал}
 
 Равновесния потенциал се определя от неравното разпределение на йони между вътрешността и външната среда на клетката и различната пропускливост на клетката към различните видове йони.
 
-\vspace{5mm} %5mm vertical space
 \subsection{Видове йони, намиращи се в клетката}
 
 В невроните и обграждащата ги течност, най-често срещани са следните йони:
@@ -89,9 +87,8 @@
   \item отрицателно заредени -хлоридни
 \end{itemize}
 
-В повечето неврони К+ йони са с по-голяма концентрация във вътрешността на клетката. Обратно, обикновено, Na+ и Cl- са с по-голяма концентрация извън клетката
+В повечето неврони К+ йони са с по-голяма концентрация във вътрешността на клетката. Обратно, обикновено, Na+ и Cl- са с по-голяма концентрация извън клетката.
 
-\vspace{5mm} %5mm vertical space
 \subsection{Как йоните прекосяват мембраната}
 
 Тъй като са заредени, йоните не могат да преминат директно през хидрофобните липидни области на мембраната. Вместо това те трябва да използват специализираните протеини, които образуват хидрофилен тунел през мембраната. Някои от каналчетата са отворени, когато неврона е в покой, а други се активирит при въздействие от сигнал. Някои йонни каналчета са избрителни спрямо пропускливостта на различните видове неврони, съответно се наричат калиеви и натриеви каналчета. При невроните равновесният потенциал се влия главно от движението на К+ през калиевите каналчета.
@@ -103,17 +100,14 @@
 Когато входен сигнал достигне тялото на клетката, невронът ще ускори рапространяваща се промяна в мембранния потенциал. Преминаващата вълна на електричесво се нарича акционен потенциал. Акционните потенциали преминават с константна скорост от около 100m/s и с константна честота. 
 В спокойно състояние невроните имта равновесен потенциал от -60 до -70 миливолта. Това означава, че вътрешната част на клетката е отрицателно заредена.
 
-\vspace{5mm} %5mm vertical space
 \subsection{Цикъл на акционния потенциал}
 
 Акциноният потенциал се задейства, когато деполяризацията увеличи мембранния волтаж, така че де премине граничната стойност, която е обикновено -55 миливолта. При достигането на тази граница, N+ каналчета, зависещи от волтажа, се отварят и позволяват на натриевите йони да навлязат в клетката. Този поток от натриеви йони увеличава мембранния потенциал много бързо, докато той достигне +40 миливолта. След кратък период от време, натриевите каналчета се самодективират, спирайки навлизането на натрия. Множество калиеви каналчета, зависещи от волтажа, се отварят позволявайки на калия да излезе извън клетката. Това бързо намалява мембранния потенциал, връщайки го обратно в нормалното му равновесно положение. Калиевите каналчета остават отворени по-дълго време, но в крайна сметка те се затварят и мембранни потенциал се стабилизира. Натриевите каналчета се връщат в нормалното си състояние, затворени, но очакващи стимулиращо напрежение. Така цикълът на акционния потенциал може да започне отново.
 
-\vspace{5mm} %5mm vertical space
 \subsection{Предаване на сигнала от акционния потенциал}
 
 Потенциала на аксона може да преминава само в една посока - от тялото на клетката към терминала на аксона. Когато една област от мембраната e подложена на въздействието на акционния потенциал, много N+ йони, навлизат в тази част на клетката. Тези йони се разпръзкват във вътрешността на клектака и могат да деполяризират съседни области на мембраната, подтиквайки отварянето на натриевите каначлчета и предизвиквайки протичането на акционен потенциал в тази част.
 
-\vspace{5mm} %5mm vertical space
 \subsection{Мембраната като електрическа верига}
 
 За да можем да моделираме електрическите свойства на мембраната, ще ги представим като елементи в еквилентната и електрическа схема. Хидрофилните участатъци на молекулите, изграждащи клетъчната мембрана, притежават способността да се йонизират, а хидрофобните участаци образуват централен диелектричен слой. Така можем да определим клетъчната мембрана като кондензатор, който се характеризира с електричен капацитет. Капацитетът на един кондензатор, c, расте с увеличаване на площта на плочите, A, и намалява с увеличаване на разстоянието между тях, d. В биологичните мембрани дебелината на хидрофобния участък от липидния бислой е много малка – около 2.5 nm. Това определя много висока стойност на мембранния капацитет – близо до 1 /микрофарада/ .  Използваме следната формула за изчисляване на “специфичния капацитет” /тук слагаме формула/. Натрупването на заряд от двете страни на мембраната, получен от разликата в концентрацията на йоните, предизвиква потенциална разлика между вътрешната и външната част на клетката. Тя може да бъде измерена с формулата /тук слагаме формулата/. Тъй като капацитета на мембраната е голям, дори натрупването на малък заряд от двете и страни води до голяма потенцилна разлика./тук има за довършване/ 
