Rework of the H-H model intro.

--- a/tex/NeuronModeling.tex
+++ b/tex/NeuronModeling.tex
@@ -113,25 +113,32 @@
 
 За да можем да моделираме електрическите свойства на мембраната, ще ги представим като елементи в еквилентната и електрическа схема. Хидрофилните участатъци на молекулите, изграждащи клетъчната мембрана, притежават способността да се йонизират, а хидрофобните участаци образуват централен диелектричен слой. Така можем да определим клетъчната мембрана като кондензатор, който се характеризира с електричен капацитет. Капацитетът на един кондензатор, c, расте с увеличаване на площта на плочите, A, и намалява с увеличаване на разстоянието между тях, d. В биологичните мембрани дебелината на хидрофобния участък от липидния бислой е много малка – около 2.5 nm. Това определя много висока стойност на мембранния капацитет – близо до 1 /микрофарада/ .  Използваме следната формула за изчисляване на “специфичния капацитет” /тук слагаме формула/. Натрупването на заряд от двете страни на мембраната, получен от разликата в концентрацията на йоните, предизвиква потенциална разлика между вътрешната и външната част на клетката. Тя може да бъде измерена с формулата /тук слагаме формулата/. Тъй като капацитета на мембраната е голям, дори натрупването на малък заряд от двете и страни води до голяма потенцилна разлика./тук има за довършване/ 
 
-\section{Аксонът но Ходжкинс-Хъксли}
-\subsection[Изравняване на напрежението]{Изравняване на напрежението\footnote{Voltages Clamping}}
-    За да можем да изследваме напълно някое свойство на даден предмет, трябва да можем да го контролираме процесите, в които това свойство
-    се проявява.  Един от най - важните ппроцеси за нас е процесът по обмяна на вещества.  Обмяната на вещества от своя страна, обаче влияе
-    на напрежението в неврона, което от своя страна влияе на обмяната на веществана. Виждаме, че се получава цикличен процес, който се
-    изследва много трудно. За наше щастие съществува начин, по който да фиксираме напрежението в неврона. Този метод са използвали Ходжкинс
-    и Хъксли. Нека разгледаме следната схема.
-    \begin{center}
-        \includegraphics{./schemas/voltage-clamp.pdf}
-    \end{center}
-    През аксона е прокаран дълъг и тънък проводник, свързан с положителния вход на усилвател с коефициент 1. Отрицателният вход на усилвателя
-    е заземен (или е свързан с течност като тази в която се намира неврона). По този начин усилвателя предава ток с напрежение $V_n$ равно на
-    напрежението в самия неврон. Този ток се подава като отрицателен вход на друг усилвател с коефициент 1. На положителния вход на този
-    усилвател се подава ток с напрежение двойно на желаното равновесно напрежение $V_d$. Този ток през амперметър и след това се подава в
-    другия край на аксона. По точи начин ако $V_n > 2V_d$ в точката $AL$ напрежението ще бъде по - ниско от нормалното за акосна, за да се
-    компенсира това положителните частици ще се насочат в тази посока, намаляки напрежението в аксона. Напрежението ще намалява клонейки към
-    $V_n$ и когато стане равно на $V_n$ токът, излизащ от усилвател $U_2$ ще бъде с напрежение $U_d$, като така се получава равновесие в
-    системата.
-\subsection{Извеждане на математическия модел}
+\section{Модел на Ходжкин-Хъксли}
+    \subsection[Експериментални методи]{Експериментални методи}
+        За да можем да изследваме напълно някое свойство на даден предмет, трябва да можем да го контролираме процесите, в които това свойство
+        се проявява.  Един от най - важните ппроцеси за нас е процесът по обмяна на вещества.  Обмяната на вещества от своя страна, обаче влияе
+        на напрежението в неврона, което от своя страна влияе на обмяната на веществана. Виждаме, че се получава цикличен процес, който се
+        изследва много трудно. За наше щастие съществува начин, по който да фиксираме напрежението в неврона. Този метод са използвали Ходжкинс
+        и Хъксли. Нека разгледаме следната схема.
+        \begin{figure}[h!]
+            \centering
+            \includegraphics{./schemas/voltage-clamp.pdf}
+            \caption{Електрическа схема за фиксиране на напрежението}
+        \end{figure}
+        През аксона е прокаран дълъг и тънък проводник, свързан с положителния вход на усилвател с коефициент 1. Отрицателният вход на усилвателя
+        е заземен (или е свързан с течност като тази в която се намира неврона). По този начин усилвателя предава ток с напрежение $V_n$ равно на
+        напрежението в самия неврон. Този ток се подава като отрицателен вход на друг усилвател с коефициент 1. На положителния вход на този
+        усилвател се подава ток с напрежение двойно на желаното равновесно напрежение $V_d$. Този ток през амперметър и след това се подава в
+        другия край на аксона. По точи начин ако $V_n > 2V_d$ в точката $AL$ напрежението ще бъде по - ниско от нормалното за акосна, за да се
+        компенсира това положителните частици ще се насочат в тази посока, намаляки напрежението в аксона. Напрежението ще намалява клонейки към
+        $V_n$ и когато стане равно на $V_n$ токът, излизащ от усилвател $U_2$ ще бъде с напрежение $U_d$, като така се получава равновесие в
+        системата.
+
+        Ние разглеждаме неврона като дълъг и много тънък кабел. Както ще видим от модела, протичането на ток през неврона
+        зависи от две променливи време и пространство. Идеята на пространствената фиксация е да се изключи пространството.
+        По този начин ако бъде предизвикан импулс, той ще се разпространи по целия аксон едновременно. Това се постига като
+        през аксона се прокара дълъг и тънък проводник и неврона се постави в течност с ниско съпротивление.
+    \subsection{Извеждане на математическия модел}
     Ще разглеждаме невронът като дългъг и тънък кабел. Това означава, че напрежението/токът, по него ще зависи само от една пространствена
     променлива -- $x$. Нека с $j\left(x, t\right)$ означим потока на електрически заряди в точка $x$. С други думи, $j\left(x, t\right)$ e
     скоростта, с която преминава електрическя заряд през точката, $x$. Нека сега разгледаме един, достатъчно малък интервал от неврона
