Derivation of model in progress.

--- a/tex/NeuronModeling.tex
+++ b/tex/NeuronModeling.tex
@@ -6,6 +6,7 @@
 \usepackage[english,bulgarian]{babel}
 \usepackage{graphicx}
 \usepackage{caption}
+\usepackage{amsmath}
 
 \title{Приложение на математиката за моделиране на реални процеси. Моделиране на неврон.}
 \author{Тонка Желева \and Васил Пашов}
@@ -119,12 +120,14 @@
         се проявява.  Един от най - важните ппроцеси за нас е процесът по обмяна на вещества.  Обмяната на вещества от своя страна, обаче влияе
         на напрежението в неврона, което от своя страна влияе на обмяната на веществана. Виждаме, че се получава цикличен процес, който се
         изследва много трудно. За наше щастие съществува начин, по който да фиксираме напрежението в неврона. Този метод са използвали Ходжкинс
-        и Хъксли. Нека разгледаме следната схема.
+        и Хъксли. Нека разгледаме следната схема:
+
         \begin{figure}[h!]
             \centering
             \includegraphics{./schemas/voltage-clamp.pdf}
             \caption{Електрическа схема за фиксиране на напрежението}
         \end{figure}
+
         През аксона е прокаран дълъг и тънък проводник, свързан с положителния вход на усилвател с коефициент 1. Отрицателният вход на усилвателя
         е заземен (или е свързан с течност като тази в която се намира неврона). По този начин усилвателя предава ток с напрежение $V_n$ равно на
         напрежението в самия неврон. Този ток се подава като отрицателен вход на друг усилвател с коефициент 1. На положителния вход на този
@@ -140,7 +143,7 @@
         през аксона се прокара дълъг и тънък проводник и неврона се постави в течност с ниско съпротивление.
     \subsection{Извеждане на математическия модел}
     Ще разглеждаме невронът като дългъг и тънък кабел. Това означава, че напрежението/токът, по него ще зависи само от една пространствена
-    променлива -- $x$. Нека с $j\left(x, t\right)$ означим потока на електрически заряди в точка $x$. С други думи, $j\left(x, t\right)$ e
+    променлива -- $x$. Нека с $i\left(x, t\right)$ означим заряда в точката $x$, в момента $t$, a с $j\left(x, t\right)$ означим потока на електрически заряди в точка $x$. С други думи, $j\left(x, t\right)$ e
     скоростта, с която преминава електрическя заряд през точката, $x$. Нека сега разгледаме един, достатъчно малък интервал от неврона
     $\left[\xi, \xi+\Delta\xi\right]$:
 
@@ -152,9 +155,47 @@
 
     От закона за запазване на електрическия заряд знаем, че сумата от електричните заряди в една затворена система (система, която не обменя
     частици с околната среда) се запазва. Това означава, че изменението в интервала, който разглеждаме е равно на разликата между потока във
-    входната точка и потока в изходната точка. За да получим общото изменение, трябва да съмираме изменението във всяка точка от интервала,
+    входната точка и потока в изходната точка. За да получим общото изменение, трябва да сумираме изменението във всяка точка от интервала,
     това води до следното уравнение:
-    \begin{equation}
-        j\left(\xi,t\right) - j\left(\xi + \Delta\xi, t\right) = \int_{\xi}^{\xi + \Delta\xi} j\left(x, t\right) dx
+    \begin{equation}\label{integral_form}
+        j\left(\xi,t\right) - j\left(\xi + \Delta\xi, t\right) = \int_{\xi}^{\xi + \Delta\xi} i\left(\xi,t\right)dx
     \end{equation}
+
+    От друга страна от дефиницията за електричен ток знаем, че токът е зарядът преминал за единица време през напречното сечение на
+    проводника. Тоест $I = j\left(x, t\right)$. Закона на Ом пък е известно че $I = \frac{U}{R} $. Токът е равен на напрежението разделено
+    на съпротивлението. Сега можем да запишем \eqref{integral_form} по следния начин:
+    \begin{equation}
+        U\left(\xi,t\right) - U\left(\xi + \Delta\xi, t\right) = R\int_{\xi}^{\xi + \Delta\xi} i\left(\xi,t\right)dx
+    \end{equation}
+    Това е интегралната форма на закона за запазване. Ние сега ще го приведем в диференциална форма. Първо апроксимираме интеграла в дясна
+    та част, използвайки формулата на правоъгълниците, и получаваме:
+    
+    \begin{gather*} 
+        U\left(\xi,t\right) - U\left(\xi + \Delta\xi, t\right) = i\left(\xi + \frac{\Delta\xi}{2},t\right)R\Delta\xi +
+        O\left(\Delta\xi^3\right)R\\
+     \end{gather*}
+
+     Сега делим на $\Delta\xi$ и пускаме $\Delta\xi$ да клони към 0 и получаваме следното за тока през аксона:
+     
+    \begin{gather*} 
+        \frac{U\left(\xi,t\right) - U\left(\xi + \Delta\xi, t\right)}{\Delta\xi} = i\left(\xi + \frac{\Delta\xi}{2},t\right)R +
+        O\left(\Delta\xi^2\right)R\\
+        i\left(\xi,t\right) = -\frac{1}{R}\frac{dU}{dx}\left(\xi,t\right)
+     \end{gather*}
+
+  %   От друга страна през мембраната също ще протече ток. откъдето следва:
+
+  % \begin{equation} 
+  %     j(x,t)= -\frac{1}{R}\frac{d^2U}{dx^2}\left(\xi,t\right)
+  %  \end{equation}
+
+  %  Където $j(x,t)$ е сумат на от капацитивния поток и тока протичащ през кондензатора (капацитивен ток) и тока протичащ през мембраната.
+
+  % \begin{equation} 
+  %     j_{ion}(x,t)= -\frac{1}{R}\frac{d^2U}{dx^2}\left(\xi,t\right)
+  %  \end{equation}
+
+
+
+
 \end{document} 
