Started derivatoin of the cable equation.

--- a/tex/NeuronModeling.tex
+++ b/tex/NeuronModeling.tex
@@ -5,6 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[english,bulgarian]{babel}
 \usepackage{graphicx}
+\usepackage{caption}
 
 \title{Приложение на математиката за моделиране на реални процеси. Моделиране на неврон.}
 \author{Тонка Желева \and Васил Пашов}
@@ -130,5 +131,23 @@
     компенсира това положителните частици ще се насочат в тази посока, намаляки напрежението в аксона. Напрежението ще намалява клонейки към
     $V_n$ и когато стане равно на $V_n$ токът, излизащ от усилвател $U_2$ ще бъде с напрежение $U_d$, като така се получава равновесие в
     системата.
+\subsection{Извеждане на математическия модел}
+    Ще разглеждаме невронът като дългъг и тънък кабел. Това означава, че напрежението/токът, по него ще зависи само от една пространствена
+    променлива -- $x$. Нека с $j\left(x, t\right)$ означим потока на електрически заряди в точка $x$. С други думи, $j\left(x, t\right)$ e
+    скоростта, с която преминава електрическя заряд през точката, $x$. Нека сега разгледаме един, достатъчно малък интервал от неврона
+    $\left[\xi, \xi+\Delta\xi\right]$:
 
+    \begin{figure}[h!]
+        \centering
+        \input{./schemas/flow}
+        \caption{}
+    \end{figure}
+
+    От закона за запазване на електрическия заряд знаем, че сумата от електричните заряди в една затворена система (система, която не обменя
+    частици с околната среда) се запазва. Това означава, че изменението в интервала, който разглеждаме е равно на разликата между потока във
+    входната точка и потока в изходната точка. За да получим общото изменение, трябва да съмираме изменението във всяка точка от интервала,
+    това води до следното уравнение:
+    \begin{equation}
+        j\left(\xi,t\right) - j\left(\xi + \Delta\xi, t\right) = \int_{\xi}^{\xi + \Delta\xi} j\left(x, t\right) dx
+    \end{equation}
 \end{document} 
